--- a/login.html
+++ b/login.html
@@ -167,6 +167,7 @@ form input[type="submit"]:hover {
         <form action="" class="input-field">
             <div class="input-field">
             <input type="password" placeholder="Senha" id="senha">
+            <span class="lnr lnr-eye"></span>
             <div class="underline"></div>
             </div>
         </form>
