--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/1ab94d0eba.js" crossorigin="anonymous"></script>
     <title>Área de Login</title>
     <link rel="stylesheet" href="estilologin.css">
-    <link rel="icon" href="logotipouni.png">
+    <link rel="shortcut icon" href="logotipouni.png">
 
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
