--- a/adm.html
+++ b/adm.html
@@ -8,6 +8,7 @@
     <title>Administração de Grupos</title>
     <script type="text/javascript" src="jquery-3.6.1.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="logotipouni.png">
 </head>
 
 <style>
