--- a/créditos.html
+++ b/créditos.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="jquery-3.6.1.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="logotipouni.png">
+    <link rel="shortcut icon" href="logotipouni.png">
 </head>
 
 <style>
